Fix overflowing cards

--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ div.section-head>div>p {
 
 div.card {
     padding: 0px 20px 20px 20px;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.6);
     transition: all 0.5s;
 
